<resources>
    <string name="app_name">Resume Framer</string>
    <string name="application_name">CV Framer</string>
    <string name="copyrights"> by AlphaVerse 360</string>
    <string name="open_nav_drawer">Open</string>
    <string name="close_nav_drawer">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_profile">Create Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="personal_info_name">Name</string>
    <string name="personal_info_dob">D.O.B</string>
    <string name="personal_info_email">Email Id</string>
    <string name="personal_info_linkedin">LinkedIn Id</string>
    <string name="personal_info_ph">Phone No.</string>
    <string name="personal_info_address">Address</string>
    <string name="academic_credentials">Academic Credentials</string>
    <string name="qualification">Qualification</string>
    <string name="qualification_degree">course/degree</string>
    <string name="qualification_institution">School/University</string>
    <string name="qualification_percentage">Grade/Percentage</string>
    <string name="qualification_YOP">Year of passing</string>
    <string name="skills">Skills</string>
    <string name="Projects_details">Project Details</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="project_duration">Project Duration</string>
    <string name="strength">Strength</string>
    <string name="achievement">Achievements</string>
    <string name="iv">Industrial Visit</string>
    <string name="preview">preview</string>
    <string name="resume_one">resOne</string>
</resources>