<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tool="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tool:context=".activities.editresume.EditResumeActivity"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
    <ScrollView
        android:screenReaderFocusable="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginBottom="50dp"
        android:overScrollMode="ifContentScrolls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tool:ignore="UselessParent">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personal_detail_iv"
            android:layout_width="80dp"
            android:layout_height="70dp"
          android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_below="@+id/personal_detail_iv"
            android:id="@+id/nav_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/agencyfb"
            android:gravity="center"
            android:text="@string/personal_info"
            android:textColor="#707070"
            android:textSize="24sp"
            android:textStyle="italic|bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/nav_header_name"
            android:id="@+id/name_itl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:textColorHint="#443E3E"
            app:boxStrokeColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personal_details_name"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                android:hint="@string/personal_info_name"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/dob_linear_layout"
            android:layout_below="@+id/name_itl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:textColorHint="#443E3E"
                app:boxStrokeColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/personal_details_dob"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:hint="@string/personal_info_dob" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/personal_info_datePicker"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/dob_linear_layout"
            android:id="@+id/address_itl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#443E3E"
            app:boxStrokeColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personal_details_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textMultiLine"
                android:hint="@string/personal_info_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/address_itl"
            android:id="@+id/email_itl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#443E3E"
            app:boxStrokeColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personal_details_emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"
                android:hint="@string/personal_info_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/email_itl"
            android:id="@+id/phone_itl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#443E3E"
            app:boxStrokeColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personal_details_phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="phone"
                android:hint="@string/personal_info_ph" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/phone_itl"
            android:id="@+id/linked_itl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#443E3E"
            app:boxStrokeColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personal_details_linkedIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="text"
                android:hint="@string/personal_info_linkedin" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_below="@id/linked_itl"
            android:id="@+id/personal_detail_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_group" />
   </RelativeLayout>
    </ScrollView>
    </FrameLayout>


